Roma - Global Commit 88 - Finished Form with Client Side Validations and Project Info Count Down - Pre Sizing Fix on Mobile

--- a/app/javascript/stylesheets/2-component_styles/contact.scss
+++ b/app/javascript/stylesheets/2-component_styles/contact.scss
@@ -96,6 +96,12 @@ textarea {
   font-weight: 200 !important;
 }
 
+.form-message {
+  @include font_mix;
+  color: red !important;
+  font-size: 16px !important;
+}
+
 #contact-btn {
   @include font_mix;
   font-weight: 200 !important;
@@ -109,4 +115,16 @@ textarea {
   background-color: white;
   color: black !important;
   border: 1px solid black;
+}
+
+.form-group {
+  margin-bottom: 0 !important;
+}
+
+#count {
+  @include font_mix;
+  color: white;
+  float: right;
+  font-weight: 300 !important;
+  font-size: 16px !important;
 }
